--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 dependencies {
 
     // pebble is the templating engine
-    compile group: 'io.pebbletemplates', name: 'pebble', version: '3.0.5'
+    compile group: 'io.pebbletemplates', name: 'pebble-spring-boot-2-starter', version: '3.0.5'
 
     // postgresql JDBC driver
     compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
