--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.2.71'
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -24,6 +28,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.2.71'
 
     // pebble is the templating engine
     compile group: 'io.pebbletemplates', name: 'pebble-spring-boot-2-starter', version: '3.0.5'
@@ -33,4 +38,16 @@ dependencies {
 
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
