--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@
 src/main/resources/static/media/headers/*
 src/main/resources/static/media/profiles/*
 src/main/resources/static/media/posts/*
+src/main/resources/static/media/groups/*
 
 # But make sure not to exclude the default images (as those *should* be tracked)
 !src/main/resources/static/media/headers/default.png
 !src/main/resources/static/media/profiles/default.png
+!src/main/resources/static/media/groups/default.png
 
 ### STS ###
 .apt_generated
